--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="icofont-envelope"></i>
                   <h4>Email:</h4>
-                  <p  class="mailLink"><a href="mailto: 19btc037@ietdavv.edu.in" style="text-decoration: none; color: #fff;">19btc037@ietdavv.edu.in</a><br><a href="mailto: kashifraza08012001@gmail.com" class="mailLink" style="text-decoration: none; color: #fff;">kashifraza08012001@gmail.com</a></p>
+                  <p  class="mailLink"><a href="mailto: 19btc037@ietdavv.edu.in" style="text-decoration: none; color: #fff;">19btc037@ietdavv.edu.in</a></p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
