--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact Us</h2>
+          <h2>Contact Me</h2>
         </div>
 
         <div class="row justify-content-center">
